--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,4 +26,4 @@ jobs:
            sudo pip3 install imutils
            sudo pip3 install streamlink
            sudo pip3 install Pillow
-           sudo python3 insec/ts_ytb.py /opt/ in/   https://www.youtube.com/watch?v=fdOpGkzq7jw
+           sudo python3 insec/ts_ytb.py /opt/ in/   https://youtu.be/7CEKIfn49g8
